--- a/CE-MCP-Plugin/CEPluginLibrary/CEPluginLibrary.csproj
+++ b/CE-MCP-Plugin/CEPluginLibrary/CEPluginLibrary.csproj
@@ -13,31 +13,49 @@
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+    <BaseOutputPath>bin\</BaseOutputPath>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <!-- 首先设置一个默认OutputPath，确保验证阶段不会失败 -->
+    <OutputPath>bin\Release\</OutputPath>
+    <!-- 然后根据Configuration覆盖为正确的OutputPath -->
+    <OutputPath Condition=" '$(Configuration)' == 'Debug' ">bin\Debug\</OutputPath>
+    <OutputPath Condition=" '$(Configuration)' == 'Release' ">bin\Release\</OutputPath>
+  </PropertyGroup>
+  
+  <!-- Debug Configuration -->
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
     <Optimize>False</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <BaseOutputPath>bin\</BaseOutputPath>
-    <OutputPath>bin\$(Configuration)\</OutputPath>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <!-- 无条件的OutputPath，确保无论Platform是什么都能找到 -->
-    <OutputPath Condition=" '$(OutputPath)' == '' ">bin\Release\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
   </PropertyGroup>
+  
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Any CPU' ">
+    <DebugType>full</DebugType>
+    <DebugSymbols>True</DebugSymbols>
+    <Optimize>False</Optimize>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <OutputPath>bin\Debug\</OutputPath>
+  </PropertyGroup>
+  
+  <!-- Release Configuration -->
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>True</Optimize>
     <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
+  
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Any CPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>True</Optimize>
     <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\Release\</OutputPath>
   </PropertyGroup>
