fix: 修复GitHub Actions构建配置问题
- 修复Release|x64配置的输出文件名错误（example-c.dll -> CE-MCP-Plugin.dll）
- 统一所有配置的.def文件引用路径为CE-MCP-Plugin.def
- 移除硬编码的本地路径D:\git\cheat-engine\Cheat Engine\bin- 移除不必要的NuGet包恢复步骤（项目不使用NuGet）

这些修复解决了GitHub Actions CI/CD管道中的构建配置错误。

Co-authored-by: dakou <dakou@iflow.cn>

--- a/CE-MCP-Plugin.vcxproj
+++ b/CE-MCP-Plugin.vcxproj
@@ -90,7 +90,7 @@
     <OutDir>$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(Platform)\$(Configuration)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
-    <LibraryPath>D:\git\cheat-engine\Cheat Engine\bin\;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -165,7 +165,7 @@
       </CompileAs>
     </ClCompile>
     <Link>
-      <AdditionalOptions>/def:./example-c.def %(AdditionalOptions)</AdditionalOptions>
+      <AdditionalOptions>/def:./CE-MCP-Plugin.def %(AdditionalOptions)</AdditionalOptions>
       <OutputFile>$(OutDir)CE-MCP-Plugin.dll</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <ProgramDatabaseFile>$(OutDir)CE-MCP-Plugin.pdb</ProgramDatabaseFile>
@@ -193,15 +193,15 @@
       <CompileAs>CompileAsCpp</CompileAs>
     </ClCompile>
     <Link>
-      <AdditionalOptions>/def:./example-c.def %(AdditionalOptions)</AdditionalOptions>
-      <OutputFile>$(OutDir)example-c.dll</OutputFile>
+      <AdditionalOptions>/def:./CE-MCP-Plugin.def %(AdditionalOptions)</AdditionalOptions>
+      <OutputFile>$(OutDir)CE-MCP-Plugin.dll</OutputFile>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <DataExecutionPrevention />
-      <ImportLibrary>$(OutDir)example-c.lib</ImportLibrary>
+      <ImportLibrary>$(OutDir)CE-MCP-Plugin.lib</ImportLibrary>
       <TargetMachine>MachineX64</TargetMachine>
       <AdditionalDependencies>lua53-64.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
