fix: 添加CE-MCP-Plugin分支到GitHub Actions触发条件
Co-authored-by: dakou <dakou@iflow.cn>

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -2,9 +2,9 @@ name: Build CE-MCP-Plugin
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main, master, CE-MCP-Plugin ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main, master, CE-MCP-Plugin ]
   workflow_dispatch:
     inputs:
       configuration:
