fix: 添加-MaximumRedirection参数解决SourceForge下载重定向问题
- 在Invoke-WebRequest命令中添加-MaximumRedirection 5参数
- 确保正确处理SourceForge的重定向链接，下载实际的ZIP文件
- 修复下载的文件不是有效ZIP的问题

Co-authored-by: dakou <dakou@iflow.cn>

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -60,9 +60,9 @@ jobs:
         $x64Zip   = Join-Path $tmp 'lua53-x64.zip'
 
         Write-Host 'Downloading Lua 5.3.6 Win32...'
-        Invoke-WebRequest -Uri 'https://sourceforge.net/projects/luabinaries/files/5.3.6/Windows%20Libraries/Static/lua-5.3.6_Win32_lib.zip/download' -OutFile $win32Zip -UseBasicParsing
+        Invoke-WebRequest -Uri 'https://sourceforge.net/projects/luabinaries/files/5.3.6/Windows%20Libraries/Static/lua-5.3.6_Win32_lib.zip/download' -OutFile $win32Zip -UseBasicParsing -MaximumRedirection 5
         Write-Host 'Downloading Lua 5.3.6 x64...'
-        Invoke-WebRequest -Uri 'https://sourceforge.net/projects/luabinaries/files/5.3.6/Windows%20Libraries/Static/lua-5.3.6_Win64_lib.zip/download' -OutFile $x64Zip -UseBasicParsing
+        Invoke-WebRequest -Uri 'https://sourceforge.net/projects/luabinaries/files/5.3.6/Windows%20Libraries/Static/lua-5.3.6_Win64_lib.zip/download' -OutFile $x64Zip -UseBasicParsing -MaximumRedirection 5
 
         # Basic validation of downloaded files
         function Test-IsZip($path) {
