--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -65,12 +65,35 @@ jobs:
         $luaSrcPath = Join-Path $env:RUNNER_TEMP 'lua-5.3.6\src'
         Push-Location $luaSrcPath
         
+        # Find Visual Studio installation
+        $vswhere = "${env:ProgramFiles(x86)}\Microsoft Visual Studio\Installer\vswhere.exe"
+        if (Test-Path $vswhere) {
+          $vsPath = & $vswhere -latest -property installationPath
+          $vcvars32 = Join-Path $vsPath 'VC\Auxiliary\Build\vcvars32.bat'
+          $vcvars64 = Join-Path $vsPath 'VC\Auxiliary\Build\vcvars64.bat'
+        } else {
+          # Fallback to common paths
+          $vcvars32 = "${env:ProgramFiles}\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars32.bat"
+          $vcvars64 = "${env:ProgramFiles}\Microsoft Visual Studio\2022\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
+          if (-not (Test-Path $vcvars32)) {
+            $vcvars32 = "${env:ProgramFiles}\Microsoft Visual Studio\2022\Professional\VC\Auxiliary\Build\vcvars32.bat"
+            $vcvars64 = "${env:ProgramFiles}\Microsoft Visual Studio\2022\Professional\VC\Auxiliary\Build\vcvars64.bat"
+          }
+          if (-not (Test-Path $vcvars32)) {
+            $vcvars32 = "${env:ProgramFiles}\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars32.bat"
+            $vcvars64 = "${env:ProgramFiles}\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars64.bat"
+          }
+        }
+        
+        Write-Host "Using vcvars32: $vcvars32"
+        Write-Host "Using vcvars64: $vcvars64"
+        
         # Build Win32 static library
-        cmd /c '"C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars32.bat" && cl /MD /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-32.lib"'
+        cmd /c ('"' + $vcvars32 + '" && cl /MD /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-32.lib"')
         
         # Build x64 static library
         Write-Host 'Building Lua 5.3.6 for x64...'
-        cmd /c '"C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Auxiliary\Build\vcvars64.bat" && cl /MD /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-64.lib"'
+        cmd /c ('"' + $vcvars64 + '" && cl /MD /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-64.lib"')
         
         Pop-Location
         
