fix: 修复Lua编译CRT选项以匹配项目配置
- 将Lua编译选项从/MD（动态CRT）改为/MT（静态CRT）
- 匹配项目配置中的RuntimeLibrary设置：MultiThreaded
- 解决LNK2019链接错误：缺少CRT函数导入（__imp__strtod、__imp__strspn等）
- 确保Lua静态库与项目使用相同的CRT版本

Co-authored-by: dakou <dakou@iflow.cn>

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -89,11 +89,11 @@ jobs:
         Write-Host "Using vcvars64: $vcvars64"
         
         # Build Win32 static library
-        cmd /c ('"' + $vcvars32 + '" && cl /MD /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-32.lib"')
+        cmd /c ('"' + $vcvars32 + '" && cl /MT /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-32.lib"')
         
         # Build x64 static library
         Write-Host 'Building Lua 5.3.6 for x64...'
-        cmd /c ('"' + $vcvars64 + '" && cl /MD /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-64.lib"')
+        cmd /c ('"' + $vcvars64 + '" && cl /MT /O2 /c /DLUA_BUILD_AS_DLL *.c && lib /OUT:lua53-static.lib *.obj && copy lua53-static.lib "' + $libsDir + '\lua53-64.lib"')
         
         Pop-Location
         
