fix: 修复PowerShell语法错误
- 将'ls -la'改为'Get-ChildItem -Force'以兼容PowerShell
- 添加shell: pwsh确保命令在PowerShell环境中执行
- 修复'A parameter cannot be found that matches parameter name -la'错误

Co-authored-by: dakou <dakou@iflow.cn>

--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -110,11 +110,12 @@ jobs:
       working-directory: ${{ github.workspace }}
 
     - name: List build output
+      shell: pwsh
       run: |
         if ('${{ env.BUILD_PLATFORM }}' -eq 'x64') {
-          ls -la ${{ env.BUILD_PLATFORM }}\${{ env.BUILD_CONFIGURATION }}
+          Get-ChildItem -Path "${{ env.BUILD_PLATFORM }}\${{ env.BUILD_CONFIGURATION }}" -Force | Format-Table Name,Length,LastWriteTime
         } else {
-          ls -la ${{ env.BUILD_CONFIGURATION }}
+          Get-ChildItem -Path "${{ env.BUILD_CONFIGURATION }}" -Force | Format-Table Name,Length,LastWriteTime
         }
       working-directory: ${{ github.workspace }}
 
